# waygate-mcp

./: .bandit  .env.backup.20251009_003652  .env.example  .env.template  .gitignore  .safety-policy.json  .semgrep.yml  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_INTEGRATION.md  CLAUDE_DESKTOP_SETUP.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  GITHUB_RELEASE.md  LICENSE  MCP_PROXY_POLICY.md  OAUTH1A_IMPLEMENTATION_SUMMARY.md  OAUTH1A_SETUP.md  OAUTH_MIGRATION_GUIDE.md  PYTHON_ENVIRONMENT_FIX.md  README.md  README_GITHUB.md  RELEASE_NOTES_v2.1.0.md  SECURITY.md  TASKWARRIOR_IMPLEMENTATION.sh  TASKWARRIOR_SUMMARY.md  X_TWITTER_AUTH_SETUP.md  activate_venv.sh  claude_desktop_config.json  docker-compose.dev.yml  init.sh  mcp-taskwarrior-audit.md  mcp.json  pyproject.toml  quickstart-turso.sh  quickstart.sh  requirements-docker.txt  requirements.txt  simple_server.py  (+3 more)
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
01-docs/: SECURITY_COMPLIANCE.md
02-src/features/: x_twitter_integration.py
02-src/shared/: database_simple.py
05-scripts/: security-monitor.py  security-scan.sh  validate-security-setup.sh
05-scripts/maintenance/: execute-release.sh  fix-sequence.sh
ai-dev-tasks/ADRs/: ADR-001-core-architecture.md
ai-dev-tasks/PRDs/: 00-prd-waygate-mcp-framework.md
ai-dev-tasks/database/: database-schema.md
ai-dev-tasks/risk-register/: project-risk-register.md
ai-dev-tasks/runbooks/: waygate-operations-runbook.md
ai-dev-tasks/specifications/: api-specification.md
ai-dev-tasks/test-plans/: comprehensive-test-plan.md
audit-reports/: 0001-AUDIT-092925-initial-directory-assessment.md  0002-CHORE-092925-MASTER-STRUCTURE-IMPLEMENTED.md  0003-CHORE-092925-FILE-MIGRATION-COMPLETE.md  0004-RELEASE-092925-EXCELLENCE-ACHIEVED.md  0005-AUDIT-092925-GITHUB-REPO-AUDIT.md  security_validation_20250929_005508.md
deployment/: Dockerfile  Dockerfile.proxy  docker-compose.monitoring.yml  docker-compose.proxy.yml  docker-compose.yml  firewall-rules.yml  iptables-rules.sh  proxy-deployment-guide.md  waygate-mcp.service
deployment/docs/: AFTER_ACTION_REPORT.md
deployment/scripts/: docker-entrypoint.sh
docs/: CONTAINER_SECURITY.md  PROJECT_KNOWLEDGE.md
documentation/: 01-PRD.md  02-ADR.md  CLAUDE.md  MCP_INTEGRATION_DESIGN.md
documentation/ai-dev-tasks/: README.md
documentation/ai-dev-tasks/sop/: standard-operating-procedures.md
documentation/ai-dev-tasks/specifications/: tech-spec-waygate-mcp.md
documentation/ai-dev-tasks/tasks/: 00-tasks-waygate-mcp-implementation.md
monitoring/: alert_rules.yml  grafana-dashboard.json  prometheus.yml
nginx/: nginx.conf
policies/: egress-policy.rego
proxy/: egress-rules.json  firewall-rules.sh  proxy-config.yml
reports/: 20250928-waygate-mcp-forensic-analysis.txt
scripts/: dashboard.sh  fix-python-environment.sh  install-systemd-service.sh  pre-release-verification.sh  proxy-entrypoint.sh
source/: database.py  example_tools.py  mcp_integration.py  mcp_tools.py  requirements-dev.txt  requirements-docker.txt  requirements.txt  start_waygate.sh  waygate_mcp.py  waygate_simple.py
source-backup-092925/: database.py  exceptions.py  mcp_integration.py  mcp_tools.py  requirements-proxy.txt  waygate_mcp.py
source-backup-092925/plugins/: base_plugin.py  firebase_mcp_plugin.py  github_plugin.py  plugin_loader.py
source/plugins/: __init__.py  mcp_bridge_plugin.py
src/: waygate_mcp.py
templates/: POST_RELEASE_COMMUNICATIONS.md
working-docs/: 00-TASK-LIST.md
